--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </div>
     </header>
 
-    <div class="content">
-        <div id="headerContent1">       
+    <div id="headerContent">
+        <div class="contentText">       
             <h3>Star Wars, The Force Awakens</h1>
             <p>
                 Plus de 30 ans après la bataille d'Endor, la galaxie n'en a pas fini
@@ -51,7 +51,9 @@
                 Un mystérieux guerrier, Kylo Ren, semble vouer un culte à Dark Vador et pourchasse les ennemis du Premier Ordre à travers la galaxie. Au même moment, une jeune femme nommée Rey, pilleuse d'épaves sur la planète désertique Jakku, va faire la rencontre de Finn, un Stormtrooper en fuite, une rencontre qui bouleversera sa vie.
             </p>
         </div>
-        <img src="./Assets/ad.jpg" class="imgRow1" alt="" />
+        <div class="contentImg">
+            <img src="./Assets/ad.jpg" class="imgRow1" alt="" />
+        </div>
     </div>
 
     <div id="imgKiloren">
