--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/grid.css" />
-    <link rel="stylesheet" href="./css/mediaquery.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./mediaquery.css" />
   </head>
   <body>
-    <header id="pageHeader">
-      <img src="./Assets/header.png" class="header-img" alt="" />
-      <div class="header-menu">
+    <header>
+      <img src="./Assets/header.png" class="header_img" alt="header" />
+      <section class="header-menu">
         <ul>
           <li>Le coté limineux</li>
           <li>Le coté obscur</li>
@@ -19,60 +18,99 @@
           <li>Les droides</li>
           <li>Les eworks</li>
         </ul>
-      </div>
+      </section>
     </header>
 
-    <div id="headerContent">
-        <div class="contentText">       
-            <h3>Star Wars, The Force Awakens</h1>
-            <p>
-                Plus de 30 ans après la bataille d'Endor, la galaxie n'en a pas fini
-                avec la tyrannie et l’oppression. Les membres de l'Alliance rebelle,
-                devenus la « Résistance », combattent les vestiges de l'Empire réunis
-                sous la bannière du « Premier Ordre ».
-            </p>
-            <p>
-                Un mystérieux guerrier, Kylo Ren, semble vouer un culte à Dark Vador
-                et pourchasse les ennemis du Premier Ordre à travers la galaxie. Au
-                même moment, une jeune femme nommée Rey, pilleuse d'épaves sur la
-                planète désertique Jakku, va faire la rencontre de Finn, un
-                Stormtrooper en fuite, une rencontre qui bouleversera sa vie.
-            </p>
-            <p>
-                Plus de 30 ans après la bataille d'Endor, la galaxie n'en a pas fini avec la tyrannie et l’oppression. Les membres de l'Alliance rebelle, devenus la « Résistance », combattent les vestiges de l'Empire réunis sous la bannière du « Premier Ordre ».
-            </p>
-            <p>
-                Un mystérieux guerrier, Kylo Ren, semble vouer un culte à Dark Vador et pourchasse les ennemis du Premier Ordre à travers la galaxie. Au même moment, une jeune femme nommée Rey, pilleuse d'épaves sur la planète désertique Jakku, va faire la rencontre de Finn, un Stormtrooper en fuite, une rencontre qui bouleversera sa vie.
-            </p>
-            <p>
-                Plus de 30 ans après la bataille d'Endor, la galaxie n'en a pas fini avec la tyrannie et l’oppression. Les membres de l'Alliance rebelle, devenus la « Résistance », combattent les vestiges de l'Empire réunis sous la bannière du « Premier Ordre ».
-            </p>
-            <p>
-                Un mystérieux guerrier, Kylo Ren, semble vouer un culte à Dark Vador et pourchasse les ennemis du Premier Ordre à travers la galaxie. Au même moment, une jeune femme nommée Rey, pilleuse d'épaves sur la planète désertique Jakku, va faire la rencontre de Finn, un Stormtrooper en fuite, une rencontre qui bouleversera sa vie.
-            </p>
-        </div>
-        <div class="contentImg">
-            <img src="./Assets/ad.jpg" class="imgRow1" alt="" />
-        </div>
-    </div>
+    <main>
+      <article class="article_ad">
+        <section class="article_ad__text">
+          <h3>Star Wars, The Force Awakens</h3>
+          <br />
+          <p>
+            Plus de 30 ans après la bataille d'Endor, la galaxie n'en a pas fini
+            avec la tyrannie et l’oppression. Les membres de l'Alliance rebelle,
+            devenus la « Résistance », combattent les vestiges de l'Empire
+            réunis sous la bannière du « Premier Ordre ».
+          </p>
+          <br />
+          <p>
+            Un mystérieux guerrier, Kylo Ren, semble vouer un culte à Dark Vador
+            et pourchasse les ennemis du Premier Ordre à travers la galaxie. Au
+            même moment, une jeune femme nommée Rey, pilleuse d'épaves sur la
+            planète désertique Jakku, va faire la rencontre de Finn, un
+            Stormtrooper en fuite, une rencontre qui bouleversera sa vie.
+          </p>
+          <br />
+          <p>
+            Plus de 30 ans après la bataille d'Endor, la galaxie n'en a pas fini
+            avec la tyrannie et l’oppression. Les membres de l'Alliance rebelle,
+            devenus la « Résistance », combattent les vestiges de l'Empire
+            réunis sous la bannière du « Premier Ordre ».
+          </p>
+          <br />
+          <p>
+            Un mystérieux guerrier, Kylo Ren, semble vouer un culte à Dark Vador
+            et pourchasse les ennemis du Premier Ordre à travers la galaxie. Au
+            même moment, une jeune femme nommée Rey, pilleuse d'épaves sur la
+            planète désertique Jakku, va faire la rencontre de Finn, un
+            Stormtrooper en fuite, une rencontre qui bouleversera sa vie.
+          </p>
+          <br />
+          <p>
+            Plus de 30 ans après la bataille d'Endor, la galaxie n'en a pas fini
+            avec la tyrannie et l’oppression. Les membres de l'Alliance rebelle,
+            devenus la « Résistance », combattent les vestiges de l'Empire
+            réunis sous la bannière du « Premier Ordre ».
+          </p>
+          <br />
+          <p>
+            Un mystérieux guerrier, Kylo Ren, semble vouer un culte à Dark Vador
+            et pourchasse les ennemis du Premier Ordre à travers la galaxie. Au
+            même moment, une jeune femme nommée Rey, pilleuse d'épaves sur la
+            planète désertique Jakku, va faire la rencontre de Finn, un
+            Stormtrooper en fuite, une rencontre qui bouleversera sa vie.
+          </p>
+        </section>
+        <section class="article_ad__img">
+          <img src="./Assets/ad.jpg" class="ad_img" alt="ad" />
+        </section>
+      </article>
 
-    <div id="imgKiloren">
-        <img src="./Assets/kiloren.jpg" class="imgKiloren" alt="" />
-    </div>
+      <article>
+        <img src="./Assets/kiloren.jpg" class="kiloren_img" alt="ad" />
+      </article>
 
-    <div id="contentKiloren">
-        <p>
-            Plus de 30 ans après la bataille d'Endor, la galaxie n'en a pas fini avec la tyrannie et l’oppression. Les membres de l'Alliance rebelle, devenus la « Résistance », combattent les vestiges de l'Empire réunis sous la bannière du « Premier Ordre ».
-        </p>
-        <p>
-            Un mystérieux guerrier, Kylo Ren, semble vouer un culte à Dark Vador et pourchasse les ennemis du Premier Ordre à travers la galaxie. Au même moment, une jeune femme nommée Rey, pilleuse d'épaves sur la planète désertique Jakku, va faire la rencontre de Finn, un Stormtrooper en fuite, une rencontre qui bouleversera sa vie.
-        </p>
-    </div>
+      <h1>A long time ago, in a galaxy far, far away…</h1>
 
-    <div id="imgStorm">
-        <img src="./Assets/stormtroopers.jpg" class="imgStorm" alt="" />
-    </div>
-    
-    <footer id="pageFooter">Footer</footer>
+      <article class="article_kiloren">
+        <section class="article_kiloren_img__left">
+          <img src="./Assets/r2d2_c3p0.jpg" class="r2d2_img" alt="r2d2" />
+        </section>
+        <section class="article_kiloren_text__right">
+          La Guerre des étoiles (titre original Star Wars, soit littéralement
+          Guerres Stellaires ) est une épopée cinématographique de
+          science-fiction créée par George Lucas, considérée comme un élément
+          phare du space opera. Prévue à la base pour être une suite de trois
+          trilogies (triptyque), Lucas fut contraint, par manque de moyens
+          techniques, de commencer par la seconde trilogie (l'Épisode IV - Un
+          nouvel espoir) en 1977. La série connut un succès phénoménal partout
+          dans le monde et engendra une très importante communauté de fans. Sans
+          prétendre expliquer le succès du premier film (s'il y avait une
+          recette, cela se saurait), on peut, toutefois, noter que, malgré le
+          manque de moyens (le budget était relativement modeste, les acteurs
+          presque inconnus) :
+        </section>
+      </article>
+
+      <article>
+        <img
+          src="./Assets/stormtroopers.jpg"
+          class="stormtr_img"
+          alt="stormtr"
+        />
+      </article>
+    </main>
+
+    <footer>Footer</footer>
   </body>
 </html>
