--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./mediaquery.css" />
+    <link rel="stylesheet" href="./image.css" />
+    <script src="./index.js"></script>
   </head>
   <body>
     <header>
       <img src="./Assets/header.png" class="header_img" alt="header" />
       <section class="header-menu">
+        <ul>
+          <li>Le coté limineux</li>
+          <li>Le coté obscur</li>
+          <li>L'empire</li>
+          <li>Les droides</li>
+          <li>Les eworks</li>
+        </ul>
+      </section>
+      <img src="./Assets/menu.png" class="menu_img" alt="menu" />
+      <section class="header-menu_phone">
         <ul>
           <li>Le coté limineux</li>
           <li>Le coté obscur</li>
